--- a/css/style.css
+++ b/css/style.css
@@ -329,6 +329,13 @@ a:focus {
     object-fit: cover;
 }
 
+@media (max-width: 767.98px){
+    .carousel .carousel-img img {
+        width: 100%;
+        height: 100%;
+        object-fit: unset;
+    }  
+}
 .carousel .carousel-text {
     position: absolute;
     max-width: 700px;
